--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <noscript>This site requires Javascript to function. Please enable it and reload the page, or use a modern browser.</noscript>
         <header>
             <h1><i class="fa fa-steam-square" aria-hidden="true"></i> Steam Battle</h1>
-            <p>
-                enter two steam players by id and see which is the most hardcore!
-            </p>
         </header>
+        <p>
+            who is the most hardcore?
+        </p>
         <div id="app"></div>
         <footer>
             <p>Steam Battle © 2017 by <a href="https://github.com/gilmoreg/" target="_blank">Grayson Gilmore</a>. All rights reserved.</p>
