--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <noscript>This site requires Javascript to function. Please enable it and reload the page, or use a modern browser.</noscript>
         <header>
-            <h1><i class="fa fa-steam-square" aria-hidden="true"></i> Steam Battle</h1>
+            <h1><img src="/assets/steambattle.svg" alt="Steam Battle"></h1>
         </header>
         <p>
             who is the most hardcore?
