--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <noscript>This site requires Javascript to function. Please enable it and reload the page, or use a modern browser.</noscript>
         <header>
-            <h1><img src="/assets/steambattle.svg" alt="Steam Battle"></h1>
+            <h1><img src="/assets/steambattle_silver.svg" alt="Steam Battle"></h1>
         </header>
         <p>
             who is the most hardcore?
@@ -20,7 +20,6 @@
         <div id="app"></div>
         <footer>
             <p>Steam Battle © 2017 by <a href="https://github.com/gilmoreg/" target="_blank">Grayson Gilmore</a>. All rights reserved.</p>
-            <p>Powered by: </p>
             <p>Steam is a registered trademark of <a href="http://www.valvesoftware.com/" target="_blank">Valve Corporation</a>. This site is neither owned nor endorsed by Valve Corporation.</p>
         </footer>
         <script src="js/index.js"></script>
