Fix player component responsiveness

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         <header>
             <h1><img src="assets/steambattle_silver.svg" alt="Steam Battle"></h1>
         </header>
-        <p>
-            who is the most hardcore?
-        </p>
+        <p>who is the most hardcore?</p>
         <div id="app"></div>
         <footer>
             <p>Steam Battle © 2017 by <a href="https://github.com/gilmoreg/" target="_blank">Grayson Gilmore</a>. All rights reserved.</p>
